Bug 337031 - Broken c++ import visibility support
Summary: Broken c++ import visibility support
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.13.2
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-07-04 08:01 UTC by Ralf Habacker
Modified: 2014-07-04 10:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.3
Sentry Crash Report:


Attachments
test case (283 bytes, text/x-chdr)
2014-07-04 08:02 UTC, Ralf Habacker
Details
testcase (343 bytes, text/x-chdr)
2014-07-04 08:38 UTC, Ralf Habacker
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2014-07-04 08:01:46 UTC
Importing a c++ class in the mentioned version do not honor the provided attribute and member visibility. All attributes and methods are public by default


Reproducible: Always

Steps to Reproduce:
1. open umbrello
2. import the appended test case
3. drag class Test on diagram
4. uncheck "public only" checkbox in  "Display" diagram property page
Actual Results:  
All three methods are shown as public methods

Expected Results:  
The import should show one public, protected and private member and one public, protected and private method.
Comment 1 Ralf Habacker 2014-07-04 08:02:05 UTC
Created attachment 87532 [details]
test case
Comment 2 Ralf Habacker 2014-07-04 08:38:58 UTC
Created attachment 87534 [details]
testcase

syntax error fix
Comment 3 Ralf Habacker 2014-07-04 10:37:02 UTC
Git commit b32539eab2926505adcd09f5b74381aebc74b0b9 by Ralf Habacker.
Committed on 04/07/2014 at 10:31.
Pushed by habacker into branch 'master'.

Fix visibility on c++ import.

The root cause for this issue is that CmdSetVisibility requires to have
the uml object in the document uml object list, which is not the case for
newly created attributes or operations on import.

M  +1    -1    umbrello/codeimport/import_utils.cpp

http://commits.kde.org/umbrello/b32539eab2926505adcd09f5b74381aebc74b0b9
Comment 4 Ralf Habacker 2014-07-04 10:38:34 UTC
Git commit 65d3e16809d780f06d7a2a0feb0dd2be9246c0f8 by Ralf Habacker.
Committed on 04/07/2014 at 10:31.
Pushed by habacker into branch 'KDE/4.13'.

Fix visibility on c++ import.

The root cause for this issue is that CmdSetVisibility requires to have
the uml object in the document uml object list, which is not the case for
newly created attributes or operations on import.
FIXED-IN:4.13.3
(cherry picked from commit b32539eab2926505adcd09f5b74381aebc74b0b9)

M  +1    -1    umbrello/codeimport/import_utils.cpp

http://commits.kde.org/umbrello/65d3e16809d780f06d7a2a0feb0dd2be9246c0f8