Fix visibility on c++ import.

The root cause for this issue is that CmdSetVisibility requires to have
the uml object in the document uml object list, which is not the case for
newly created attributes or operations on import.

BUG:337031
FIXED-IN:4.13.3
(cherry picked from commit b32539eab2926505adcd09f5b74381aebc74b0b9)