umbrello/codeimport/import_utils.cpp
@@ -444,7 +444,7 @@ void insertMethod(UMLClassifier *klass, UMLOperation* &op,
                   bool isFriend, bool isConstructor,
                   const QString& comment)
 {
-    op->setVisibility(scope);
+    op->setVisibilityCmd(scope);
     if (!type.isEmpty()     // return type may be missing (constructor/destructor)
         && type != "void") {
         if (type == klass->name()) {
